--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Plataforma do Interclasse de Games"
+      content="Plataforma criada por TecVit"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Interclasse</title>
+    <title>Interclasse de Games</title>
   </head>
   <body>
     <noscript>Você precisa permitir o JavaScript do seu Navegador.</noscript>
